--- a/package.json
+++ b/package.json
@@ -16,9 +16,13 @@
   "dependencies": {
     "bootstrap": "^5.0.1",
     "gatsby": "^3.4.1",
+    "gatsby-plugin-sass": "^4.6.0",
+    "gatsby-source-filesystem": "^3.6.0",
+    "gatsby-transformer-remark": "^4.3.0",
     "react": "^17.0.1",
     "react-bootstrap": "^1.6.0",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "sass": "^1.34.0"
   },
   "devDependencies": {
     "prettier": "2.2.1"
