--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "0BSD",
   "scripts": {
     "build": "gatsby build",
-    "develop": "gatsby develop",
+    "develop": "env-cmd -f .env.development  gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
     "start": "npm run develop",
     "serve": "gatsby serve",
@@ -14,9 +14,16 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "@contentful/rich-text-html-renderer": "^14.1.2",
     "bootstrap": "^5.0.1",
+    "contentful": "^8.3.7",
     "gatsby": "^3.4.1",
+    "gatsby-plugin-image": "^1.6.0",
     "gatsby-plugin-sass": "^4.6.0",
+    "gatsby-plugin-sharp": "^3.6.0",
+    "gatsby-remark-images": "^5.3.0",
+    "gatsby-remark-relative-images": "^0.2.2",
+    "gatsby-source-contentful": "^5.6.1",
     "gatsby-source-filesystem": "^3.6.0",
     "gatsby-transformer-remark": "^4.3.0",
     "react": "^17.0.1",
@@ -25,6 +32,7 @@
     "sass": "^1.34.0"
   },
   "devDependencies": {
+    "env-cmd": "^10.1.0",
     "prettier": "2.2.1"
   },
   "repository": {
