--- a/package.json
+++ b/package.json
@@ -15,6 +15,11 @@
   },
   "dependencies": {
     "@contentful/rich-text-html-renderer": "^14.1.2",
+    "@fortawesome/fontawesome-free": "^5.15.3",
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "@fortawesome/react-fontawesome": "^0.1.14",
+    "aos": "^2.3.4",
     "bootstrap": "^5.0.1",
     "contentful": "^8.3.7",
     "gatsby": "^3.4.1",
